Deployment/Kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ck_website
  labels:
    name: ck_website
