Deployment/Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ck-website
  namespace: ck-website
  labels:
    app: ck-website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ck-website
  template:
    metadata:
      labels:
        app: ck-website
    spec:
      containers:
        - name: ck-website
          image: __REPOSITORY_IMAGE__
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 20m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 1000Mi
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ck-website
  namespace: ck-website
  labels:
    app: ck-website
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ck-website
