Deployment/Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ck-website-route
  namespace: ck-website
  labels:
    kcert.dev/ingress: "managed"
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/affinity-canary-behavior: "sticky"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - colinkern.centralus.cloudapp.azure.com
    secretName: colinkws-cert
  rules:
    - host: colinkern.centralus.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ck-website
                port:
                  number: 8080
